Fix landing page header/full-bleed image styles

--- a/sitemedia/scss/base/_layout.scss
+++ b/sitemedia/scss/base/_layout.scss
@@ -15,4 +15,8 @@ body {
 
 body {
   margin: 0;
+  margin-top: $header-nav-height;  /* clear the nav */
+  padding: 0;
+  padding-top: 80px;
 }
+
