--- a/sitemedia/scss/base/_navigation.scss
+++ b/sitemedia/scss/base/_navigation.scss
@@ -2,12 +2,13 @@
 
 header.nav {
     width: 100%;
-    height: 90px;
+    height: $header-nav-height;
     max-width: 1440px;
     position: fixed;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.95);
     left: 0;
+    top: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +18,7 @@ header.nav {
     &.hidden {
         margin-top: -90px;
     }
-    nav {
+   nav {
         @extend .responsive-container;
         padding-top: 22px;
         display: flex;
