--- a/sitemedia/scss/base/_typography.scss
+++ b/sitemedia/scss/base/_typography.scss
@@ -38,8 +38,6 @@ a {
 
 body {
   background-color: $light-grey;
-  margin: 0;
-  padding: 0;
   font-family: $font-stack-body-text;
   font-size: 20px;
   color: #000000;
