--- a/sitemedia/scss/base/_variables.scss
+++ b/sitemedia/scss/base/_variables.scss
@@ -24,6 +24,9 @@ $dark-grey: #646464;   // formerly text-gray
 $offwhite: #f9f9f9;
 $black: #000000;
 
+// local items
+$header-nav-height: 90px;
+
 // bitters built-ins
 
 // Font Colors
